# Mipt-Term5-ParallelComputing

./: .gitignore  README.md
Task1/: Graphic.ipynb
Task1/.ipynb_checkpoints/: Graphic-checkpoint.ipynb
Task1/Summator/: CMakeLists.txt  main.cpp
Task1/Summator/LongSum/: LongSum.cpp  LongSum.h
Task1/Summator/ReadFullFile/: FullFileReader.cpp  FullFileReader.h
Task1/Summator/Summator/: Summator.cpp  Summator.h
Task1/Summator/testLib/googletest-master/googletest/: CMakeCache.txt
Task1/Summator/tests/SummatorTest/: SummatorTest.cpp  SummatorTest.h
Task1/Summator/tests/TimeElapser/: TimeElapser.cpp  make
Task1/Summator/tests/testGenerator/: testGenerator.cpp
Task2/: Graphic.ipynb
Task2/.ipynb_checkpoints/: Graphic-checkpoint.ipynb
Task2/MatrixMultiplier/: CMakeLists.txt  main.cpp
Task2/MatrixMultiplier/MatrixMultiply/: MatrixMultiplier.cpp  MatrixMultiplier.h
Task2/MatrixMultiplier/TimeElapser/: TimeElapser.cpp
Task2/MatrixMultiplier/testGenerator/: testGenerator.cpp
Task3/: Graphic.ipynb
Task3/MatrixMultiply/: MatrixMultiplier.cpp  MatrixMultiplier.h
Task3/TimeElapser/: TimeElapser.cpp
Task3/testGenerator/: testGenerator.cpp
Task5/: Graphic.ipynb  Text File.txt
Task5/MatrixMultiplier/: CMakeLists.txt  main.cpp
Task5/MatrixMultiplier/MatrixMultiplier2/: MatrixMultiplier2.cpp  MatrixMultiplier2.h
Task5/MatrixMultiplier/MatrixMultiply/: MatrixMultiplier.cpp  MatrixMultiplier.h
Task5/MatrixMultiplier/TimeElapser/: TimeElapser.cpp
Task5/MatrixMultiplier/testGenerator/: GenerateTest.cpp  testGenerator.cpp
Task5/MatrixMultiplier/tests/: tests.cpp
